# cerberus

./: .drone.yml  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  benchmarks.py  production-deployment
aws/: aws.py  benchmarks.py  master-startup.sh  worker-startup.sh
cli/: Cargo.toml
cli/doc/: command_line_interface.md
cli/src/: main.rs  parser.rs  runner.rs
cli/src/commands/: cancel.rs  cluster_status.rs  download.rs  mod.rs  run.rs  status.rs  upload.rs
cli/src/common/: client_id.rs  mod.rs
cli/tests/: end-to-end.rs
docs/api/: client_api_v0_0_1.md
docs/planning/: future_features.md  inital_exploration_doc.md  multi_machine_support.md
examples/cloud/cerberus-docker/: docker-compose.yml
libcerberus/: Cargo.toml
libcerberus/doc/: input-output-api-0.1.0.md
libcerberus/examples/: distributed-grep.rs  end-to-end.rs  ngrams.rs  rating-aggregator.rs  rating-by-genre.rs  rating-by-year.rs  sprint-seven-demo.md  sprint-six-demo.md  sprint-three-demo.md  word-counter.rs
libcerberus/src/: combiner.rs  emitter.rs  intermediate.rs  io.rs  lib.rs  mapper.rs  partition.rs  reducer.rs  registry.rs  runner.rs  serialise.rs
libcerberus/tests/: end-to-end.rs
master/: Cargo.toml  Dockerfile  ProdDockerfile  build.rs
master/content/: dashboard.js  index.html  stylesheet.css
master/src/: client_interface.rs  grpc_server.rs  main.rs  main_loop.rs  mapreduce_job.rs  mapreduce_service.rs  mapreduce_tasks.rs  parser.rs  queued_work_store.rs  scheduler.rs  worker_interface.rs  worker_manager.rs  worker_poller.rs  worker_registration_service.rs
master/src/client_communication/: client_interface.rs  mapreduce_service.rs  mod.rs
master/src/common/: job.rs  mod.rs  task.rs  worker.rs
master/src/dashboard/: fetch_logs.rs  mod.rs  server.rs
master/src/initialization/: dashboard_server.rs  data_layer.rs  grpc_server.rs  master_resources.rs  mod.rs  state_handler.rs
master/src/mapreduce_tasks/: mapreduce_task.rs  mod.rs  task_processor.rs
master/src/scheduler/: job_processing.rs  job_processor.rs  mapreduce_scheduler.rs  mod.rs  new_scheduler.rs  scheduler.rs  scheduling_loop.rs  state.rs  task_manager.rs  task_processor.rs  worker_manager_adapter.rs
master/src/scheduler/old/: mod.rs  scheduler.rs  scheduling_loop.rs
master/src/scheduling/: mod.rs  scheduler.rs  state.rs  task_processor.rs
master/src/server/: client_service.rs  filesystem_service.rs  mod.rs  new_worker_service.rs  server.rs  worker_service.rs
master/src/state/: handler.rs  job_queue.rs  mod.rs  state_store.rs
master/src/state_handler/: mod.rs  state_handler.rs
master/src/state_management/: state_handler.rs
master/src/worker_communication/: mod.rs  worker_interface.rs  worker_registration_service.rs  worker_service.rs
master/src/worker_management/: mod.rs  new_worker_manager.rs  state.rs  worker_manager.rs  worker_poller.rs
master/tests/: integration  integration_test.rs
proto/: Cargo.toml  Makefile  build.rs  filesystem.proto  mapreduce.proto  mrworker.proto  worker.proto
proto/src/: lib.rs
tests/: dfs_integration.sh  distributed_grep_test.sh  integration.sh  multi_machine.sh  state_saving.sh
tests/multi-machine/: docker-compose.yml  worker-startup.sh
util/: Cargo.toml
util/src/: lib.rs  logging.rs
util/src/data_layer/: abstraction_layer.rs  mod.rs  nfs_layer.rs  null_layer.rs  s3_layer.rs
util/src/distributed_filesystem/: distributed_file_layer.rs  filesystem_manager.rs  filesystem_master_interface.rs  filesystem_worker_interface.rs  local_file_manager.rs  mod.rs  worker_info_provider.rs
util/src/state/: mod.rs  traits.rs
worker/: Cargo.toml  Dockerfile  ProdDockerfile
worker/src/: main.rs  main_loop.rs  master_interface.rs  mrworkerservice.rs  operation_handler.rs  parser.rs  schedule_operation_service.rs  util.rs  worker_interface.rs  worker_service.rs
worker/src/communication/: intermediate_data_fetching.rs  mod.rs  worker_interface.rs
worker/src/initialization/: data_layer.rs  grpc_server.rs  mod.rs  register_worker.rs  state_handler.rs  worker_resources.rs
worker/src/operations/: combine.rs  io.rs  map.rs  mod.rs  operation_handler.rs  reduce.rs  state.rs
worker/src/server/: filesystem_service.rs  intermediate_data_service.rs  log_service.rs  master_service.rs  mod.rs  server.rs
worker/src/state/: handler.rs  mod.rs
