[package]
name = "cli"
version = "0.6.0"
authors = ["Cerberus Authors <cerberus@cpssd.net>"]

[dependencies]
cerberus-proto = { path = "../proto" }
chrono = "0.4.0"
clap = "~2.26"
error-chain = "0.11.0"
grpc = "0.2.1"
prettytable-rs = "^0.6"
uuid = { version = "0.5", features = ["v4"] }
util = { path = "../util" }
