[package]
name = "master"
version = "0.2.0"
authors = ["Cerberus Authors <cerberus@cpssd.net>"]

[dependencies]
clap = "~2.26"
cerberus-proto = { path = "../proto" }
chrono = "0.4"
env_logger = "0.4.3"
error-chain = "0.11.0"
grpc = "0.2.1"
log = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
util = { path = "../util" }
uuid = { version = "0.5", features = ["v4"] }

[dev-dependencies]
worker = { path = "../worker" }
