[package]
name = "master"
version = "0.2.0"
authors = ["Cerberus Authors <cerberus@cpssd.net>"]

[dependencies]
cerberus-proto = { path = "../proto" }
chrono = "0.4"
clap = "~2.26"
env_logger = "0.4.3"
error-chain = "0.11.0"
futures = "0.1"
futures-cpupool = "0.1"
grpc = "0.2.1"
log = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
util = { path = "../util" }
uuid = { version = "0.5", features = ["v4"] }
