[package]
name = "master"
version = "1.0.0"
build = "build.rs"
authors = ["Cerberus Authors <cerberus@cpssd.net>"]

[dependencies]
cerberus-proto = { path = "../proto" }
chrono = "0.4"
clap = "~2.26"
env_logger = "0.4.3"
error-chain = "0.11.0"
futures = "0.1"
futures-cpupool = "0.1"
grpc = "0.2.1"
iron = "0.5.1"
log = "0.3"
mount = "0.3"
protobuf = "1.4.1"
router = "0.5.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
staticfile = "0.4.0"
urlencoded = "0.6.0"
uuid = { version = "0.5", features = ["v4"] }
util = { path = "../util" }

[build-dependencies]
fs_extra = "1.1.0"
