[package]
name = "util"
version = "0.4.0"
authors = ["Cerberus Authors <cerberus@cpssd.net>"]

[dependencies]
cerberus-proto = { path = "../proto" }
chrono = "0.4"
env_logger = "0.4.3"
error-chain = "0.11.0"
grpc = "0.2.1"
log = "0.3.8"
protobuf = "1.4.1"
rand = "0.4"
uuid = { version = "0.5", features = ["v4"] }
