[package]
name = "util"
version = "0.6.0"
authors = ["Cerberus Authors <cerberus@cpssd.net>"]

[dependencies]
cerberus-proto = { path = "../proto" }
chrono = "0.4"
env_logger = "0.4.3"
error-chain = "0.11.0"
grpc = "0.2.1"
log = "0.3.8"
protobuf = "1.4.1"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5", features = ["v4"] }
rusoto_core = "0.32.0"
rusoto_s3 = "0.32.0"
futures = "0.1"
