[package]
name = "worker"
version = "0.1.0"
authors = ["Cerberus Authors <cerberus@cpssd.net>"]

[dependencies]
clap = "~2.26"
protobuf = "1.4.1"
error-chain = "0.11.0"
grpc = "0.2.1"
tls-api = "0.1.10"
serde_json = "1.0"
util = { path = "../util" }
uuid = { version = "0.5", features = ["v4"] }
cerberus-proto = { path = "../proto" }
