[package]
name = "worker"
version = "0.1.0"
authors = ["Cerberus Authors <cerberus@cpssd.net>"]

[dependencies]
bson = "0.10"
clap = "~2.26"
protobuf = "1.4.1"
error-chain = "0.11.0"
grpc = "0.2.1"
log = "0.3.8"
libc = "0.2.33"
procinfo = "0.4.2"
tls-api = "0.1.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
util = { path = "../util" }
uuid = { version = "0.5", features = ["v4"] }
cerberus-proto = { path = "../proto" }
